--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Manrope";
+    src: url("fonts/Manrope-Regular.ttf") format("truetype");
+  }
+}
